fix for overlap on homepage

--- a/src/scss/environment/_layout.scss
+++ b/src/scss/environment/_layout.scss
@@ -302,6 +302,12 @@ section p {
 	}
 }
 
+.page.home {
+	.entry-content {
+		padding-top: 2rem;
+	}
+}
+
 .page-guardians,
 .page-partners,
 .page-resources,
